[package]
name = "galois_2p8"
version = "0.1.0"
authors = ["Daniel Sweet <danieljsweet@icloud.com>"]

[dependencies]

[dev-dependencies]
proptest = "0.8"
lazy_static = "1.0"

[features]
# SIMD isn't a default feature because Rust 1.27 only exports x86/_64 ASM.
# For maximum generality, it'll stay off by default.
simd = []
